--- a/examples/inlinestyles.html
+++ b/examples/inlinestyles.html
@@ -20,12 +20,75 @@
 
     <p style="background-color: yellow; display: inline;">
       This is an example of highlighted text.
+      <p style="background-color: blue; display: inline;">
+        This is also highlighted</p>
     </p>
+    <br><br>
 
-    <div style="background-color: #a46488;">
+    <div style="background-color: #0f0f0f;">
       <p style="background-color: #ef0000;">This is my first P tag.</p>
       <p style="background-color: #ff5f5f;">This is my second P tag.</p>
     </div>
+    <br><br>
+
+    <!-- This is new box model stuff -->
+      <div style="border: 5px dashed #ef0000">
+          <div style="
+            text-align: left;
+            border: 1px solid black;
+            background-color: pink;
+            padding: 24px;
+            margin: 24px;
+            height: 200px;
+          ">
+            This is a div with a border.
+          </div>
+
+          <div style="
+            text-align: center;
+            border: 1px solid black;
+            background-color: aquamarine;
+            padding: 8px;
+            margin: 100px;
+            width: 200px;
+            display: inline-block;
+          ">
+            This is a center div
+          </div>
+
+          <div style="
+            text-align: right;
+            border: 1px solid black;
+            background-color: #f9e79f;
+            padding: 40px;
+            margin: 24px;
+          ">
+            This is a right div
+          </div>
+
+          <p align="center">
+            <img
+            style="
+              border: 5px solid blue;
+              height: 300px;
+              "
+              src="/Users/YoBoiJay/Desktop/GitHub Portfolio/Portfolio/images/DoctorStrange2 Poster.jpeg"
+            />
+          </p>
+
+            <div
+            style="
+              margin: auto;
+              background: blue;
+              border: 5px dashed blue;
+              border-radius: 50%;
+              width: 200px;
+              height: 200px;
+              padding: auto;
+            ">
+            </div>
+
+      </div>
 
   </body>
 </html>
