--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -3,62 +3,55 @@
   <head>
     <title>Portfolio</title>
   </head>
-  <body>
+  <body style="background-color: grey;">
 
     <!-- Portfolio title -->
-    <h1>
-      <div style="background-color: #232328;">
-        <hr>
-        <p align="center" style="color: white;">
-          Gemini Artworks
-        </p>
-        <hr>
-
-        <p align="center"
-        style="font-weight: 300; font-size: 24px; color: #ffcc00">
-          Home
-        </p>
-        <hr>
-
-        <p align="center"
-        style="font-weight: 100; font-size: 24px; color: #ffffff">
-          About
-        </p>
-        <hr>
-
-        <p align="center"
-        style="font-weight: 100; font-size: 24px; color: #ffffff">
-          Contact
-        </p>
-        <hr>
-
-      </div>
-    </h1>
-    <br>
-
-    <!-- Short Introduction -->
-    <h3>
-      <p align="center">
-      Hey, my name is Johnathan Gonzalez
-      </p>
-    </h3>
-
-    <p align="center"
-    style="font-size: 14px">
-      I am a newly introduced graphic designer with a good amount of experience
-      in fine arts and digital art. As of now, I have found interest in more than one
-      type of art, but most of my work comes from the digital technique as I explore
-      the world of astrology as the main theme for my services.
-    </p>
-    <hr>
-
-    <p align="center"><i>Work Examples</i></p>
-
-    <div style="background-color: #232328;">
-      <img style="height: 400px" src="../images/Leo.jpg" alt="Leo Art">
-      <img style="height: 272px" src="../images/Cancer copy.jpg" alt="Cancer Art">
-      <img style="height: 400px" src="../images/Pisces copy.jpg" alt="Pisces Art">
+    <div
+    style="
+    width: 145px;
+    margin: auto;
+    ">
+      <header class="container">
+        <figure class="brand logo">
+            <img src="/Users/YoBoiJay/Library/Mobile Documents/com~apple~CloudDocs/Personal/Gemini Artworks Branding/GA_Logo Icon/Gemini_Artworks_Icon2.png"
+            alt="logo"
+            style="
+            width: 50px;
+            height: 50px;
+            ">
+        </figure>
+      </header>
     </div>
 
+      <main class="main container">
+        <section class="intro item">
+        <div class="row">
+          <h3>
+            <p align="center">
+            Hey, my name is Johnathan Gonzalez
+            </p>
+          </h3>
+
+          <p align="center"
+          style="font-size: 14px">
+            I am a newly introduced graphic designer with a good amount of experience
+            in fine arts and digital art. As of now, I have found interest in more than one
+            type of art, but most of my work comes from the digital technique as I explore
+            the world of astrology as the main theme for my services.
+          </p>
+        </div>
+      <br>
+
+      <hr>
+
+      <p align="center"><i>Work Examples</i></p>
+
+      <div>
+        <img style="height: 400px" src="../images/Leo.jpg" alt="Leo Art">
+        <img style="height: 272px" src="../images/Cancer copy.jpg" alt="Cancer Art">
+        <img style="height: 400px" src="../images/Pisces copy.jpg" alt="Pisces Art">
+      </div>
+    </section>
+    </main>
   </body>
 </html>
