--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
   <body>
     <h1>This is a basic "Hello World" template for an HTML file.</h1>
       <p>This is a P tag</p>
+      <ul>
+
+        <li><a href="headings.html">Headings</a>
+
+        <li><a href="textstylingtags.html">Text Style Tags</a>
+
+        <li><a href="imagetags.html">Image Tags</a>
+
+      </ul>
   </body>
 </html>
