--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -3,7 +3,7 @@
   <head>
     <title>Portfolio</title>
   </head>
-  <body style="background-color: grey;">
+  <body>
 
     <!-- Portfolio title -->
     <div
@@ -12,14 +12,11 @@
     margin: auto;
     ">
       <header class="container">
-        <figure class="brand logo">
             <img src="/Users/YoBoiJay/Library/Mobile Documents/com~apple~CloudDocs/Personal/Gemini Artworks Branding/GA_Logo Icon/Gemini_Artworks_Icon2.png"
             alt="logo"
             style="
-            width: 50px;
-            height: 50px;
+            width: 150px;
             ">
-        </figure>
       </header>
     </div>
 
@@ -46,7 +43,7 @@
 
       <p align="center"><i>Work Examples</i></p>
 
-      <div>
+      <div align="center">
         <img style="height: 400px" src="../images/Leo.jpg" alt="Leo Art">
         <img style="height: 272px" src="../images/Cancer copy.jpg" alt="Cancer Art">
         <img style="height: 400px" src="../images/Pisces copy.jpg" alt="Pisces Art">
