--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -12,7 +12,7 @@
     margin: auto;
     ">
       <header class="container">
-            <img src="/Users/YoBoiJay/Library/Mobile Documents/com~apple~CloudDocs/Personal/Gemini Artworks Branding/GA_Logo Icon/Gemini_Artworks_Icon2.png"
+            <img src="Gemini_Artworks_Icon2.png"
             alt="logo"
             style="
             width: 150px;
