--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -45,8 +45,8 @@
 
       <div align="center">
         <img style="height: 400px" src="../images/Leo.jpg" alt="Leo Art">
-        <img style="height: 272px" src="../images/Cancer copy.jpg" alt="Cancer Art">
-        <img style="height: 400px" src="../images/Pisces copy.jpg" alt="Pisces Art">
+        <img style="height: 272px" src="../images/Cancer_copy.jpg" alt="Cancer Art">
+        <img style="height: 400px" src="../images/Pisces_copy.jpg" alt="Pisces Art">
       </div>
     </section>
     </main>
