--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -16,6 +16,7 @@
             alt="logo"
             style="
             width: 150px;
+            padding: ;
             ">
       </header>
     </div>
@@ -23,30 +24,57 @@
       <main class="main container">
         <section class="intro item">
         <div class="row">
-          <h3>
-            <p align="center">
+          <h3 align="center">
             Hey, my name is Johnathan Gonzalez
-            </p>
           </h3>
 
-          <p align="center"
-          style="font-size: 14px">
+          <p style="
+          background-color: #232328;
+          padding: 40px;
+          margin: 10px;
+          text-align: center;
+          color: white;
+          font-size: 14px;
+          ">
             I am a newly introduced graphic designer with a good amount of experience
             in fine arts and digital art. As of now, I have found interest in more than one
             type of art, but most of my work comes from the digital technique as I explore
             the world of astrology as the main theme for my services.
           </p>
         </div>
-      <br>
 
       <hr>
 
-      <p align="center"><i>Work Examples</i></p>
+      <div style="text-align: center;">
+        <i>Work Examples</i>
+      </div>
+      <br>
 
-      <div align="center">
-        <img style="height: 400px" src="../images/Leo.jpg" alt="Leo Art">
-        <img style="height: 272px" src="../images/Cancer_copy.jpg" alt="Cancer Art">
-        <img style="height: 400px" src="../images/Pisces_copy.jpg" alt="Pisces Art">
+      <style>
+      .image {
+        box-shadow: 5px 5px 20px 1px
+      }
+      </style>
+
+      <div style="
+      border: 4px solid #ffcc00;
+      background-color: #232328;
+      text-align: center;
+      ">
+        <img class="image" style="
+        margin: 20px;
+        height: 400px"
+        src="../images/Leo.jpg" alt="Leo Art">
+
+        <img style="
+        margin: auto;
+        height: 260px"
+        src="../images/Cancer_copy.jpg" alt="Cancer Art">
+
+        <img style="
+        margin: 20px;
+        height: 400px"
+        src="../images/Pisces_copy.jpg" alt="Pisces Art">
       </div>
     </section>
     </main>
