--- a/assignments/assignment1.html
+++ b/assignments/assignment1.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>My First Web Page</title>
   </head>
   <body>
-    <h1>
-      <p align="center">
+    <h1 style="text-align: center;">
       This is my first web page assignment.
-      </p>
     </h1>
 
-      <p align="center" style="font-size: 20px; font-weight: 300;">
+      <p style="
+      font-size: 20px;
+      font-weight: 300;
+      text-align: center;">
         Here are some images.
       </p>
       <hr>
-      <p align="center">
-        <img style="height: 250px;"
-        src="https://images.pexels.com/photos/2486168/pexels-photo-2486168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-      </p>
 
-      <!-- Palm tree image -->
-      <p align="center"><i>Palm Trees</i></p>
-      <hr>
+      <div style="
+      text-align: center;">
+        <img style="
+        height: 250px;"
+        src="https://images.pexels.com/photos/2486168/pexels-photo-2486168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+        alt="Palm trees"
+        >
 
-      <!-- Title card image -->
-      <p align="center">
-        <img style="height: 100px;"
-        src="../images/Shatora's Link Title Card.png">
-      </p>
-      <p align="center"><b>A title card I made</b></p>
+        <!-- Palm tree image -->
+        <p style="text-align: center;">
+          <i>Palm Trees</i>
+        </p>
+        <hr>
 
-      <!-- Cyberpunk image -->
-      <hr>
-      <p align="center">
-        <img style="height: 250px;"
-        src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-thumb.jpg">
-      </p>
+        <!-- Title card image -->
+        <img style="
+        height: 100px;"
+        src="../images/Shatora's_Link_Title_Card.png"
+        alt="Personal project title card"
+        >
+
+        <p style="text-align: center;">
+          <b>A title card I made</b>
+        </p>
+        <hr>
+
+        <!-- Cyberpunk image -->
+          <img style="height: 250px;"
+          src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-thumb.jpg"
+          alt="Cyberpunk city"
+          >
+      </div>
   </body>
 </html>
