--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>Portfolio</title>
+
+    <style>
+    .image {
+      box-shadow: 5px 5px 20px 1px
+    }
+    </style>
+
   </head>
   <body>
 
@@ -16,15 +23,11 @@
             alt="logo"
             style="
             width: 150px;
-            padding: ;
             ">
       </header>
     </div>
-
-      <main class="main container">
-        <section class="intro item">
         <div class="row">
-          <h3 align="center">
+          <h3 style="text-align: center;">
             Hey, my name is Johnathan Gonzalez
           </h3>
 
@@ -50,12 +53,6 @@
       </div>
       <br>
 
-      <style>
-      .image {
-        box-shadow: 5px 5px 20px 1px
-      }
-      </style>
-
       <div style="
       border: 4px solid #ffcc00;
       background-color: #232328;
@@ -65,18 +62,18 @@
         margin: 20px;
         height: 400px"
         src="../images/Leo.jpg" alt="Leo Art">
+        <br>
 
-        <img style="
+        <img class="image" style="
         margin: auto;
         height: 260px"
         src="../images/Cancer_copy.jpg" alt="Cancer Art">
+        <br>
 
-        <img style="
+        <img class="image" style="
         margin: 20px;
         height: 400px"
         src="../images/Pisces_copy.jpg" alt="Pisces Art">
       </div>
-    </section>
-    </main>
   </body>
 </html>
