--- a/assignments/PortfolioSite_Home.html
+++ b/assignments/PortfolioSite_Home.html
@@ -4,56 +4,92 @@
     <title>Portfolio</title>
 
     <style>
-    .image {
-      box-shadow: 5px 5px 20px 1px;
-      display: block;
-      margin: auto;
-    }
+      .image {
+        box-shadow: 5px 5px 20px 1px;
+        display: block;
+        margin: auto;
+      }
 
-    .gallery_pages {
-      padding: 0px;
-    }
+      .gallery_pages {
+        padding: 0px;
+      }
 
-    .image_grid {
-      padding: 10px;
-    }
+      .image_grid {
+        padding: 10px;
+      }
 
-    #selected {
-      display: inline-block;
-      color: rgba(0, 153, 153, 1);
-      background-color: #232328;
-      border: 1px solid; padding: 10px;
-      font-size: 24px;
-      width: auto;
-      margin: 50px;
-      list-style: outside none none;
-    }
+      #selected {
+        display: inline-block;
+        color: rgba(0, 153, 153, 1);
+        background-color: #232328;
+        border: 1px solid; padding: 10px;
+        font-size: 24px;
+        width: auto;
+        margin: 50px;
+        list-style: outside none none;
+      }
 
-    .page_list {
-      display: inline-block;
-      font-size: 24px;
-      color: white;
-      background-color: #232328;
-      width: auto;
-      margin: 50px;
-      list-style: outside none none;
-    }
+      .left_link {
+        list-style-type: none;
+      }
 
-    .grid_image {
-      display: inline-block;
-      width: auto;
-      margin: 50px;
-      list-style: outside none none;
-    }
+      #logo {
+        color: #ffcc00;
+        position: absolute;
+        display: block;
+      }
 
-    main {
-      font-family: times;
-    }
+      .right_link {
+        list-style-type: none;
+        float: right;
+      }
 
-    header {
-      font-family: times;
-    }
+      .page_list {
+        display: inline-block;
+        font-size: 24px;
+        color: white;
+        background-color: #232328;
+        width: auto;
+        margin: 50px;
+        list-style: outside none none;
+      }
 
+      .grid_image {
+        display: inline-block;
+        width: auto;
+        margin: 50px;
+        list-style: outside none none;
+      }
+
+      #I_Block {
+        background: #232328;
+        box-shadow: 0px 5px 0px 0px rgba(0, 153, 153, 1);
+      }
+
+      #nav_bar ul {
+        color: white;
+        background: #232328;
+        box-shadow: 0px 5px 0px 0px rgba(153, 51, 153, 1);
+        padding-inline-start: 0px;
+      }
+
+      #nav_bar ul li {
+        display: inline-block;
+        padding: 12px 24px;
+      }
+
+      main {
+        font-family: times;
+      }
+
+      header {
+        font-family: times;
+      }
+
+      body {
+        background-image: url('Space_Background.jpg');
+        background-size: contain;
+      }
     </style>
 
   </head>
@@ -61,26 +97,22 @@
 
     <!-- Portfolio title -->
     <header>
-      <h1
-      id="nav_bar"
-      style="
-      color: #ffcc00;
-      font-size: 32px;
-      font-weight: 400;
-      text-align: center;
-      background: #232328;
-      margin-left: 0px;
-      margin-right: 0px;
-      width: 99%;
-      height: 50px;
-      padding: 10px;
-      ">
-        Gemini Artworks
-      </h1>
+        <nav id="nav_bar">
+            <ul>
+              <li class="left_link">Home</li>
+              <li class="left_link">Gallery</li>
+              <li id="logo">
+                Gemini Artworks
+              </li>
+              <li class="right_link">About Me</li>
+              <li class="right_link">Contact</li>
+            </ul>
+        </nav>
     </header>
 
     <main>
       <section>
+        <br><br><br>
       <!-- Logo -->
       <img src="../images/Gemini_Artworks_Icon2.png" alt="Gemini Artworks Logo"
       style="
@@ -88,14 +120,25 @@
       display: block;
       margin: auto;
       ">
+      <br><br><br>
 
-      <div>
-        <h2 style="text-align: center;">
-          Hey, my name is Johnathan Gonzalez
-        </h2>
+      <div id="I_Block">
+        <h1 style="
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: center;
+        color: white;
+        font-size: 20px;
+        font-family: times;
+        ">
+          Hey, John here!
+        </h1>
 
-        <p id="card" style="
-        padding: 40px;
+        <p style="
+        padding-bottom: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
         text-align: center;
         color: white;
         font-size: 14px;
@@ -108,16 +151,14 @@
         </p>
       </div>
 
-      <hr>
-
       <br>
-      <h2 style="text-align: center;">
+      <h2 style="text-align: center; color: white;">
         Work Examples
       </h2>
       <br>
 
       <div style="
-      border: 4px solid #ffcc00;
+      border: 2px solid #ffcc00;
       background-color: #232328;
       text-align: center;
       ">
@@ -165,7 +206,9 @@
             height: 400px"
             src="../images/Leo.jpg" alt="Leo Art">
           </li>
+
         </ul>
+
       </section>
     </main>
   </body>
