--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Portfolio</title>
+    <title>Gemini Artworks Portfolio</title>
 
     <style>
       .image {
